# PhysicsLabs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Main.py  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  uv-pytest.yml
labs/: __init__.py
labs/flight_to_mars/: README.md  __init__.py  page.py
labs/flight_to_mars/model/: flight.py  planet.py  rocket.py
labs/flight_to_mars/stage/: criteria.py  stage.py
labs/flight_to_mars/stage/earth/: calculator.py  criteria.py  equation.py  simulation.py
labs/flight_to_mars/stage/planet/: __init__.py  calculator.py  criteria.py  equation.py  simulation.py
labs/flight_to_mars/stage/space/: calculator.py  criteria.py  equation.py  simulation.py
labs/flight_to_mars/visualization/: chart.py  render.py
labs/flight_to_mars/visualization/entity/: __init__.py  earth.py  mars.py  orbit.py  planet.py  rocket.py  sun.py
labs/model/: constant.py  enum.py  vector.py
labs/physical_pendulum/: README.md  page.py
labs/physical_pendulum/calculations/: __init__.py  calculator.py  simulation.py  util.py
labs/physical_pendulum/model/: __init__.py  state.py
labs/roll_the_ball/: README.md  __init__.py  config.py  page.py
labs/roll_the_ball/model/: ball.py  environment.py
labs/roll_the_ball/simulation/: calculator.py  movement.py  simulation.py
labs/roll_the_ball/visualization/: __init__.py  chart.py  energy.py
labs/rolling_the_ball/: README.md  config.py  page.py
labs/rolling_the_ball/calculation/: movement.py  simulation.py  utils.py
labs/rolling_the_ball/model/: __init__.py  ball.py  environment.py
labs/rolling_the_ball/simulation/: __init__.py  calculator.py  movement.py  util.py
labs/rolling_the_ball/visualization/: __init__.py  animation.py  chart.py
labs/swing_the_pendulum/: README.md  page.py
labs/swing_the_pendulum/calculations/: simulation.py  util.py
labs/swing_the_pendulum/model/: __init__.py  state.py
labs/swing_the_pendulum/simulation/: __init__.py  calculator.py  simulation.py
labs/swing_the_pendulum/visualization/: __init__.py  animation.py
labs/throw_a_rock/: README.md  __init__.py  page.py  trajectory.py  velocity.py
labs/throw_a_rock/acceleration/: __init__.py  constant.py  drag.py  linear.py  quadratic.py  variation_law.py
labs/throw_a_rock/motion/: compute.py  simulation.py
labs/throw_a_rock/velocity/: __init__.py  calculator.py  linear_resistance.py
labs/throw_a_rock/visialization/: charts.py
labs/throw_a_rock/visualization/: __init__.py  charts.py  trajectory.py  util.py  velocity.py
labs/util/: accuracy.py  trigonometry.py
labs/util/sampling/: adaptive.py  fixed.py
pages/: 01_🪨_Throw_a_rock.py
plans/: flight_to_mars_docs_and_tests.md
tests/: conftest.py  util.py
tests/flight_to_mars/: README.md  test_common_sense.py  test_earth_stage.py  test_mars_stage.py  test_space_stage.py
tests/physical_pendulum/: README.md  calculations.py  data.py  test_energy.py  test_energy_with_friction.py  test_period.py  test_period_with_friction.py  util.py
tests/roll_the_ball/: README.md  data.py  test_correctness.py  test_instant_grip_on_incline.py  test_instant_slippage_on_incline.py  test_transition_point.py  test_zero_incline.py  util.py
tests/rolling_the_ball/: README.md  data.py  test_correctness.py  test_instant_grip_on_incline.py  test_instant_slippage_on_incline.py  test_transition_point.py  test_zero_incline.py  util.py
tests/swing_the_pendulum/: README.md  calculations.py  data.py  test_energy.py  test_energy_with_friction.py  test_period.py  test_period_with_friction.py  util.py
tests/throw_a_rock/: README.md  test_linear.py  test_simple.py  util.py
tests/unit/: test_vector.py
